@@ -74,25 +74,32 @@ class FileState:
         self, msgs_store: MessageDefinitionStore, module_node: nodes.Module
     ) -> None:
         """Walk the AST to collect block level options line numbers."""
+        warnings.warn(
+            "'collect_block_lines' has been deprecated and will be removed in pylint 3.0.",
+            DeprecationWarning,
+        )
         for msg, lines in self._module_msgs_state.items():
             self._raw_module_msgs_state[msg] = lines.copy()
         orig_state = self._module_msgs_state.copy()
         self._module_msgs_state = {}
         self._suppression_mapping = {}
         self._effective_max_line_number = module_node.tolineno
-        self._collect_block_lines(msgs_store, module_node, orig_state)
+        for msgid, lines in orig_state.items():
+            for msgdef in msgs_store.get_message_definitions(msgid):
+                self._set_state_on_block_lines(msgs_store, module_node, msgdef, lines)
 
-    def _collect_block_lines(
+    def _set_state_on_block_lines(
         self,
         msgs_store: MessageDefinitionStore,
         node: nodes.NodeNG,
-        msg_state: MessageStateDict,
+        msg: MessageDefinition,
+        msg_state: dict[int, bool],
     ) -> None:
         """Recursively walk (depth first) AST to collect block level options
-        line numbers.
+        line numbers and set the state correctly.
         """
         for child in node.get_children():
-            self._collect_block_lines(msgs_store, child, msg_state)
+            self._set_state_on_block_lines(msgs_store, child, msg, msg_state)
         # first child line number used to distinguish between disable
         # which are the first child of scoped node with those defined later.
         # For instance in the code below:
@@ -115,9 +122,7 @@ class FileState:
             firstchildlineno = node.body[0].fromlineno
         else:
             firstchildlineno = node.tolineno
-        for msgid, lines in msg_state.items():
-            for msg in msgs_store.get_message_definitions(msgid):
-                self._set_message_state_in_block(msg, lines, node, firstchildlineno)
+        self._set_message_state_in_block(msg, msg_state, node, firstchildlineno)
 
     def _set_message_state_in_block(
         self,
@@ -139,18 +144,61 @@ class FileState:
                 if lineno > firstchildlineno:
                     state = True
                 first_, last_ = node.block_range(lineno)
+                # pylint: disable=useless-suppression
+                # For block nodes first_ is their definition line. For example, we
+                # set the state of line zero for a module to allow disabling
+                # invalid-name for the module. For example:
+                # 1. # pylint: disable=invalid-name
+                # 2. ...
+                # OR
+                # 1. """Module docstring"""
+                # 2. # pylint: disable=invalid-name
+                # 3. ...
+                #
+                # But if we already visited line 0 we don't need to set its state again
+                # 1. # pylint: disable=invalid-name
+                # 2. # pylint: enable=invalid-name
+                # 3. ...
+                # The state should come from line 1, not from line 2
+                # Therefore, if the 'fromlineno' is already in the states we just start
+                # with the lineno we were originally visiting.
+                # pylint: enable=useless-suppression
+                if (
+                    first_ == node.fromlineno
+                    and first_ >= firstchildlineno
+                    and node.fromlineno in self._module_msgs_state.get(msg.msgid, ())
+                ):
+                    first_ = lineno
+
             else:
                 first_ = lineno
                 last_ = last
             for line in range(first_, last_ + 1):
-                # do not override existing entries
-                if line in self._module_msgs_state.get(msg.msgid, ()):
+                # Do not override existing entries. This is especially important
+                # when parsing the states for a scoped node where some line-disables
+                # have already been parsed.
+                if (
+                    (
+                        isinstance(node, nodes.Module)
+                        and node.fromlineno <= line < lineno
+                    )
+                    or (
+                        not isinstance(node, nodes.Module)
+                        and node.fromlineno < line < lineno
+                    )
+                ) and line in self._module_msgs_state.get(msg.msgid, ()):
                     continue
                 if line in lines:  # state change in the same block
                     state = lines[line]
                     original_lineno = line
+
+                # Update suppression mapping
                 if not state:
                     self._suppression_mapping[(msg.msgid, line)] = original_lineno
+                else:
+                    self._suppression_mapping.pop((msg.msgid, line), None)
+
+                # Update message state for respective line
                 try:
                     self._module_msgs_state[msg.msgid][line] = state
                 except KeyError:
@@ -160,10 +208,20 @@ class FileState:
     def set_msg_status(self, msg: MessageDefinition, line: int, status: bool) -> None:
         """Set status (enabled/disable) for a given message at a given line."""
         assert line > 0
+        assert self._module
+        # TODO: 3.0: Remove unnecessary assertion
+        assert self._msgs_store
+
+        # Expand the status to cover all relevant block lines
+        self._set_state_on_block_lines(
+            self._msgs_store, self._module, msg, {line: status}
+        )
+
+        # Store the raw value
         try:
-            self._module_msgs_state[msg.msgid][line] = status
+            self._raw_module_msgs_state[msg.msgid][line] = status
         except KeyError:
-            self._module_msgs_state[msg.msgid] = {line: status}
+            self._raw_module_msgs_state[msg.msgid] = {line: status}
 
     def handle_ignored_message(
         self, state_scope: Literal[0, 1, 2] | None, msgid: str, line: int | None
